tests/paczka1/small_fuzzy/18381429.err
Error in line 5: t3MQkecbOZ S284 89,6
Error in line 4: PkDECHYO S284 23,7
Error in line 9: t3MQkecbOZ S8]] ],6
